bynkc/tests/fixtures/positive/245_transition_step_invariant/src/commerce/order.bynk
context commerce.order

type AuthId = String where NonEmpty
type OrderStatus = enum { Pending, Placed, Paid }

agent Order {
  key id: String

  store status: Cell[OrderStatus] = Pending
  store paymentRef: Cell[Option[AuthId]]

  -- snapshot: a committed state is internally consistent
  invariant paid_has_payment_ref:
    status == Paid implies paymentRef.isSome()

  -- step: a paid order can never become unpaid (uses is/implies; no enum Ord)
  transition paid_is_terminal:
    old.status is Paid implies new.status is Paid

  on call place() -> Effect[()] {
    status := Placed
    Effect.pure(())
  }

  on call pay(ref: AuthId) -> Effect[()] {
    status := Paid
    paymentRef := Some(ref)
    Effect.pure(())
  }
}
